Bug 211265 Log doesn't check the return value of PL_DHashTableInit r=darin sr=darin